# Invisible-and-naked-NPC-fixer

./: .gitignore  CMakeLists.txt  NakedNPCFix.ini  README.md  exports.def
src/: Settings.h  VisibilityFixer.cpp  main.cpp
